manifest & logo fix

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dummy</title>
+    <meta name="description" content="Multipurpose Intelligence for Research & Automation" />
+    <meta name="keywords" content="AI, Assistant, Chatbot, Research, Automation, M.I.R.A." />
+    <meta property="og:title" content="M.I.R.A." />
+    <title>M.I.R.A.</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js');
+        });
+      }
+    </script>
   </body>
 </html>
